--- a/index.html
+++ b/index.html
@@ -8,11 +8,50 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     </head>
     <body>
-        <div class="container bg-dark">
-            Hi there!
-        </div>
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+		<header class="navbar navbar-expand navbar-dark flex-column flex-md-row bd-navbar bg-dark">
+			<h2 class="text-white">SiteName<h2>
+		</header>
+
+		<div class="container">
+			<br>
+			<div class="row justify-content-left mx-3">
+				<div class="col-xs-8">
+					
+				</div>
+				<div class="col-xs-4">
+					<form class="border rounded bg-dark">
+						<br>
+						<h5 class="text-center text-white">Sign up</h5>
+						<br>
+						<div class="container mx-auto">
+							<div class="form-group">
+								<input type="text" class="form-control col-md-10" id="fnme" placeholder="First name">
+							</div>
+							<div class="form-group">
+								<input type="text" class="form-control col-md-10" id="lnme" placeholder="Last name">
+							</div>
+							<div class="form-group">
+								<input type="text" class="form-control col-md-10" id="usr" placeholder="Pick username">
+							</div>
+							<div class="form-group">
+								<input type="email" class="form-control col-md-10" id="email" placeholder="Email address">
+							</div>
+							<div class="form-group">
+								<input type="password" class="form-control col-md-10" id="pwd" placeholder="Create password">
+							</div>
+							<button type="submit" class="btn btn-success col-md-10">Sign up for SiteName</button>
+							<div class="form-group"></div>	
+						</div>
+					</form>
+				</div>
+			</div>
+			<footer class="bg-dark">
+				
+			</footer>
+		</div>
+		<!--Bootstrap Dependencies-->
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
     </body>
 </html>
