--- a/index.html
+++ b/index.html
@@ -14,35 +14,39 @@
 
 		<div class="container">
 			<br>
-			<div class="row justify-content-left mx-3">
-				<div class="col-xs-8">
+			<div class="row justify-content-center m-5">
+				<div class="col-12 col-xs-12 col-sm-3 col-md-5 col-lg-7 col-xl-8">
 					
 				</div>
-				<div class="col-xs-4">
-					<form class="border rounded bg-dark">
-						<br>
-						<h5 class="text-center text-white">Sign up</h5>
-						<br>
-						<div class="container mx-auto">
-							<div class="form-group">
-								<input type="text" class="form-control col-md-10" id="fnme" placeholder="First name">
+				<div class="col-12 col-xs-12 col-sm-9 col-md-7 col-lg-5 col-xl-4">
+
+						<form class="border rounded bg-dark">
+						<!---->
+							<br>
+							<h5 class="text-center text-white">Sign up</h5>
+							<br>
+							<div class="container">
+								<div class="form-group">
+									<input type="text" class="form-control col-12" id="fnme" placeholder="First name">
+								</div>
+								<div class="form-group">
+									<input type="text" class="form-control col-12" id="lnme" placeholder="Last name">
+								</div>
+								<div class="form-group">
+									<input type="text" class="form-control col-12" id="usr" placeholder="Pick username">
+								</div>
+								<div class="form-group">
+									<input type="email" class="form-control col-12" id="email" placeholder="Email address">
+								</div>
+								<div class="form-group">
+									<input type="password" class="form-control col-12" id="pwd" placeholder="Create password">
+								</div>
+								<button type="submit" class="btn btn-success col-12">Sign up for SiteName</button>
+								<div class="form-group"></div>	
 							</div>
-							<div class="form-group">
-								<input type="text" class="form-control col-md-10" id="lnme" placeholder="Last name">
-							</div>
-							<div class="form-group">
-								<input type="text" class="form-control col-md-10" id="usr" placeholder="Pick username">
-							</div>
-							<div class="form-group">
-								<input type="email" class="form-control col-md-10" id="email" placeholder="Email address">
-							</div>
-							<div class="form-group">
-								<input type="password" class="form-control col-md-10" id="pwd" placeholder="Create password">
-							</div>
-							<button type="submit" class="btn btn-success col-md-10">Sign up for SiteName</button>
-							<div class="form-group"></div>	
-						</div>
-					</form>
+						<!---->
+						</form>
+					
 				</div>
 			</div>
 			<footer class="bg-dark">
