--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 
 		<div class="container">
 			<br>
-			<div class="row justify-content-center m-5">
+			<div class="row justify-content-center mx-3">
 				<div class="col-12 col-xs-12 col-sm-3 col-md-5 col-lg-7 col-xl-8">
-					
+					<div class="jumbotron">
+						<h1>Add text here</h1>
+					</div>
 				</div>
 				<div class="col-12 col-xs-12 col-sm-9 col-md-7 col-lg-5 col-xl-4">
 
