--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
 		<div class="container">
 			<br>
 			<div class="row justify-content-center mx-3">
-				<div class="col-12 col-xs-12 col-sm-3 col-md-5 col-lg-7 col-xl-8">
-					<div class="jumbotron">
-						<h1>Add text here</h1>
+				<div class="col-12 col-xs-12 col-sm-12 col-md-5 col-lg-7 col-xl-8 py-5">
+					<div class="row">
+						<h1 class="text-left px-5">Add text here</h1>
+					</div>
+					<div class="row">
+						<p class="text-left px-5 lead">Add more text here</p>						
 					</div>
 				</div>
-				<div class="col-12 col-xs-12 col-sm-9 col-md-7 col-lg-5 col-xl-4">
+				<div class="col-12 col-xs-12 col-sm-12 col-md-7 col-lg-5 col-xl-4">
 
 						<form class="border rounded bg-dark">
 						<!---->
