--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 			<div class="row justify-content-center mx-3">
 				<div class="col-12 col-xs-12 col-sm-12 col-md-5 col-lg-7 col-xl-8 py-5">
 					<div class="row">
-						<h1 class="text-left px-5">Add text here</h1>
+						<h1 class="text-left px-5 display-1">Add text here</h1>
 					</div>
 					<div class="row">
-						<p class="text-left px-5 lead">Add more text here</p>						
+						<p class="text-left px-5 lead">Add more description here</p>						
 					</div>
 				</div>
 				<div class="col-12 col-xs-12 col-sm-12 col-md-7 col-lg-5 col-xl-4">
