--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 						<h1 class="text-left px-5 display-1">Add text here</h1>
 					</div>
 					<div class="row">
-						<p class="text-left px-5 lead">Add more description here</p>						
+						<p class="text-left px-5 lead">Add description here</p>						
 					</div>
 				</div>
 				<div class="col-12 col-xs-12 col-sm-12 col-md-7 col-lg-5 col-xl-4">
