--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 
 		<div class="container">
 			<br>
-			<div class="row justify-content-center mx-3">
-				<div class="col-12 col-xs-12 col-sm-12 col-md-5 col-lg-7 col-xl-8 py-5">
+			<div class="row justify-content-center mx-3 my-5">
+				<div class="col-12 col-xs-12 col-sm-12 col-md-6 col-lg-7 col-xl-8 py-5">
 					<div class="row">
 						<h1 class="text-left px-5 display-1">Add text here</h1>
 					</div>
 					<div class="row">
-						<p class="text-left px-5 lead">Add description here</p>						
+						<p class="text-left px-5 lead">Add more description here</p>						
 					</div>
 				</div>
-				<div class="col-12 col-xs-12 col-sm-12 col-md-7 col-lg-5 col-xl-4">
+				<div class="col-12 col-xs-12 col-sm-12 col-md-6 col-lg-5 col-xl-4 d-none d-xs-none d-sm-none d-md-block ">
 
 						<form class="border rounded bg-dark">
 						<!---->
@@ -54,13 +54,20 @@
 					
 				</div>
 			</div>
-			<footer class="bg-dark">
-				
-			</footer>
+		</div>
+		<div class="row invisible">
+			<div class="col p-4 my-4"></div>
+		</div>
+		<div class="row bg-dark p-4">
+			<div class="col">
+				<h6 class="text-white text-center lead small">
+					&copy; Copyright 2018
+				</h6>
+			</div>
 		</div>
 		<!--Bootstrap Dependencies-->
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-    </body>
+	</body>
 </html>
