--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     </head>
     <body>
 		<header class="navbar navbar-expand navbar-dark flex-column flex-md-row bd-navbar bg-dark">
-			<h2 class="text-white">SiteName<h2>
+			<h2 class="text-white px-4">SiteName<h2>
 		</header>
 
 		<div class="container">
 			<br>
 			<div class="row justify-content-center mx-3 my-5">
-				<div class="col-12 col-xs-12 col-sm-12 col-md-6 col-lg-7 col-xl-8 py-5">
+				<div class="col-12 col-md-6 col-lg-7 col-xl-8 py-5">
 					<div class="row">
 						<h1 class="text-left px-5 display-1">Add text here</h1>
 					</div>
@@ -23,7 +23,7 @@
 						<p class="text-left px-5 lead">Add more description here</p>						
 					</div>
 				</div>
-				<div class="col-12 col-xs-12 col-sm-12 col-md-6 col-lg-5 col-xl-4 d-none d-xs-none d-sm-none d-md-block ">
+				<div class="col-12 col-md-6 col-lg-5 col-xl-4 d-none d-sm-block">
 
 						<form class="border rounded bg-dark">
 						<!---->
@@ -55,16 +55,18 @@
 				</div>
 			</div>
 		</div>
-		<div class="row invisible">
-			<div class="col p-4 my-4"></div>
-		</div>
-		<div class="row bg-dark p-4">
-			<div class="col">
-				<h6 class="text-white text-center lead small">
-					&copy; Copyright 2018
-				</h6>
+		<div class="container-fluid">
+			<div class="row invisible">
+				<div class="col p-3 my-1"></div>
 			</div>
-		</div>
+			<div class="row bg-dark p-4">
+				<div class="col">
+					<h6 class="text-white text-center lead small">
+						&copy; Copyright 2018
+					</h6>
+				</div>
+			</div>
+		</div>			
 		<!--Bootstrap Dependencies-->
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
