--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
 		<header class="navbar navbar-expand navbar-dark flex-column flex-md-row bd-navbar bg-dark">
-			<h2 class="text-white px-4">SiteName<h2>
+			<h2 class="text-white px-4">Sudo.ComProg<h2>
 		</header>
 
 		<div class="container">
@@ -62,7 +62,7 @@
 			<div class="row bg-dark p-4">
 				<div class="col">
 					<h6 class="text-white text-center lead small">
-						&copy; Copyright 2018
+						&copy; Copyright 2018 by Sudo.ComProg
 					</h6>
 				</div>
 			</div>
