--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 								<div class="form-group">
 									<input type="password" class="form-control col-12" id="pwd" placeholder="Create password">
 								</div>
-								<button type="submit" class="btn btn-success col-12">Sign up for SiteName</button>
+								<button type="submit" class="btn btn-success col-12">Sign up for Sudo.ComProg</button>
 								<div class="form-group"></div>	
 							</div>
 						<!---->
