--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
 		<header class="navbar navbar-expand navbar-dark flex-column flex-md-row bd-navbar bg-dark">
-			<h2 class="text-white px-4">Sudo.</h2><h3 class="text-dust">ComProg</h3>
+			<h2 class="text-white px-4">Sudo.<p class="text-dust">ComProg</p></h2>
 		</header>
 
 		<div class="container">
