--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     </head>
     <body>
-		<header class="navbar navbar-expand navbar-dark flex-column flex-md-row bd-navbar bg-dark">
-			<h2 class="text-white px-4">Sudo.<p class="text-dust">ComProg</p></h2>
+		<header class="navbar navbar-expand navbar-dark flex-column flex-md-row bd-navbar bg-dark px-4">
+			<h2 class="text-white">Sudo.</h2><h3 class="text-dust lead">ComProg</h3>
 		</header>
 
 		<div class="container">
