--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
 		<header class="navbar navbar-expand navbar-dark flex-column flex-md-row bd-navbar bg-dark px-4">
-			<h2 class="text-white">Sudo.</h2><h3 class="text-dust lead">ComProg</h3>
+			<h2 class="text-white">Sudo.</h2><h3 class="text-dust lead mt-2">ComProg</h3>
 		</header>
 
 		<div class="container">
