--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link href="custom.css" rel="stylesheet" type="text/css"/>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     </head>
-    <body>
+    <body class="bg-dust">
 		<header class="navbar navbar-expand navbar-dark flex-column flex-md-row bd-navbar bg-dark px-4">
 			<h2 class="text-white">Sudo.</h2><h3 class="text-dust lead mt-2">ComProg</h3>
 		</header>
