--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     </head>
     <body class="bg-dust">
-		<header class="navbar navbar-expand navbar-dark flex-column flex-md-row bd-navbar bg-dark px-4">
+		<header class="navbar navbar-expand navbar-dark bd-navbar bg-dark px-4">
 			<span class="sudo-img"></span>
 			<!--
 			<h2 class="text-white">Sudo.</h2><h3 class="text-dust lead mt-2">ComProg</h3>
